--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     line-height:200%;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 transition-timing-function: linear;
 }
-nav{    
+nav{   width:100%; 
 background-color: #027039;
 padding: 15px 20px;
 
