--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ grid-template-columns: repeat(auto-fill,minmax(320px,1fr));
 
 
 #cardbgbg{left: 0;right: 0;
-    background-color:#f1e4fb;    color:#240b0b; 
+    background-color:#e7d2fa;    color:#240b0b; 
 
     --animation-duration:3s ; margin: 0px 0px 0px 0px;
 }
