--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ form input{ margin:10px;
     float: right;;
     background: #aba1f7; border: transparent;
     border-radius: 5px;font-weight: 700;
-    margin:10px; cursor: grab; color: #fff;
+    margin:10px; cursor: grab; color: #000000;
 
 }
 .color:hover{
